erase superfluous functions

--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ This package is free and open source software, licensed under GPL-3.
 
 ### Installation
 
-* You can install the released version of bagdenest from [CRAN](https://CRAN.R-project.org) with:
+* You can install (comming soon) the released version of bagdenest from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
 install.packages("bagdenest")
